trunk/Archive2/a3/d33e627f96f90c/output
main.cpp:3:2: error: #error PP_FOR_MIN NOT DEFINED
 #error PP_FOR_MIN NOT DEFINED
  ^
main.cpp:6:2: error: #error PP_FOR_MAX NOT DEFINED
 #error PP_FOR_MAX NOT DEFINED
  ^
main.cpp:17:6: error: #else after #else
     #else 
      ^
main.cpp:14:0: error: the conditional began here
     #if PP_FOR_MIN==PP_FOR_MAX
 ^
main.cpp:37:6: error: #else after #else
     #else 
      ^
main.cpp:34:0: error: the conditional began here
     #if PP_FOR_MIN1==PP_FOR_MAX1
 ^
main.cpp:57:6: error: #else after #else
     #else 
      ^
main.cpp:54:0: error: the conditional began here
     #if PP_FOR_MIN2==PP_FOR_MAX2
 ^
